# backend/internal/models/student.go
@@ -1,9 +1,9 @@
 package models
 
 type Student struct {
-	ID        int    `json:"id,omitempty"`
-	FirstName string `json:"first_name,omitempty"`
-	LastName  string `json:"last_name,omitempty"`
-	Email     string `json:"email,omitempty"`
-	Class     string `json:"class,omitempty"`
+	ID        int    `json:"id,omitempty" db:"id"`
+	FirstName string `json:"first_name,omitempty" db:"first_name"`
+	LastName  string `json:"last_name,omitempty" db:"last_name"`
+	Email     string `json:"email,omitempty" db:"email"`
+	Class     string `json:"class,omitempty" db:"class"`
 }
